# allium_prepro

./: README.md  environment.yml  example_client.py  example_gex_prepro.py  example_ref_prepro.py  pyproject.toml  run_all_mpm.sh
data/reference/: Homo_sapiens.GRCh38.103.allium.annotations.filtered.csv  Homo_sapiens.GRCh38.103.allium.annotations.full.csv
examples/: example_gex_prepro.py  example_ref_prepro.py
helpers/: update_legacy_subtypes.sh
lib/: gex_concatenator.py  gex_preprocessor.py  jude_phenotype_parser.py  subtype_thesaurus.py  subtypes.yml
mpm_experiments/: batch_umap.py  diedrich.py  heinaniemi.py  jude.py  krali.py  lilljebjorn.py  missings.py  scree.py  tran.py
src/allium_prepro/: batch_umap.py  gex_preprocessor.py  jude_phenotype_parser.py  preprocessor.py  reference_preprocessor.py  subtype_thesaurus.py  subtypes.yml
src/metadata_generation/: 1_download_ref.py  2_parse_ref.r  3_filtering.py
