# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allium_prepro"
version = "v1.0.0"
description = "ALLIUM PrePro is a library for preprocessing gene expression (GEX) and DNA methylation (DNAm) data to prepare it for prediction using the ALLIUM, a multimodal classifier of molecular subtypes in pediatric acute lymphoblastic leukemia."
readme = "README.md"
authors = [
    { name = "Mariya Lysenkova Wiklander", email = "mariya.lysenkova@medsci.uu.se" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["transcriptomics", "epigenomics", "multi-omics", "machine learning", "cancer", "leukemia"]
requires-python = ">=3.8.5"

[project.optional-dependencies]
dev = ["pytest", "bumpver", "pip-tools", "freezegun", "flake8"]

[project.urls]
Homepage = "https://github.com/Molmed/allium_prepro"


[tool.bumpver]
current_version = "v1.0.0"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"README.md" = [
    "{version}",
]

[tool.pytest.ini_options]
pythonpath = [
  "lib"
]

[tool.setuptools]
packages = ["allium_prepro"]
package-dir = {"" = "lib"}
